--- a/public/app.css
+++ b/public/app.css
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   margin: 0;
+  background-color: #282c34;
 }
 
 svg {
@@ -20,7 +21,7 @@ svg {
 
 .btn-float {
   display: flex;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   appearance: none;
