--- a/public/app.css
+++ b/public/app.css
@@ -62,6 +62,41 @@ svg {
   display: none;
 }
 
+.cm-scroller {
+  margin-top: 1rem !important;
+  margin-bottom: 3rem !important;
+}
+
+.cm-panels {
+  position: fixed !important;
+}
+
+.cm-search button[name="close"] {
+  font-size: 2em !important;
+  color: #ddd;
+}
+
+.mobile-buttons {
+  display: flex;
+  background-color: #282c34;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 0.25em;
+}
+
+.mobile-buttons > button {
+  font-size: 1em;
+  appearance: none;
+  border: 1px solid #111;
+  background-color: #282c34;
+  color: #fff;
+  display: flex;
+  padding: 0.5em 1em;
+  margin-right: 0.5em;
+}
+
 @media screen and (min-width: 64em) {
   .editor {
     display: flex;
