--- a/public/app.css
+++ b/public/app.css
@@ -67,19 +67,20 @@ svg {
   margin-bottom: 3rem !important;
 }
 
-.cm-panels {
+/* .cm-panels {
   position: fixed !important;
 }
 
 .cm-search button[name="close"] {
   font-size: 2em !important;
   color: #ddd;
-}
+} */
 
 .mobile-buttons {
   position: fixed;
   display: flex;
   background-color: #282c34;
+  top: 0;
   left: 0;
   right: 0;
   padding: 0.25em;
