--- a/public/app.css
+++ b/public/app.css
@@ -1,55 +1,83 @@
+:root {
+  --top-bar-height: 50px;
+  --bg-color: #282c34;
+}
+
 html,
 body {
   height: 100%;
   margin: 0;
-  background-color: #282c34;
+  background-color: var(--bg-color);
 }
 
 svg {
   width: 1em;
 }
 
-.editor {
-  height: 100%;
-  min-height: 100%;
+[hidden] {
+  display: none !important;
 }
 
-.editor > * {
-  height: 100%;
-  position: relative;
-}
-
-.btn-float {
+.top-bar {
+  width: 100%;
+  height: var(--top-bar-height);
   display: flex;
-  position: fixed;
-  top: 0;
-  right: 0;
-  appearance: none;
-  border: 0;
-  padding: 0;
-  line-height: 1;
+  padding: 0.2em;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.5);
+  box-sizing: border-box;
   z-index: 1000;
-  padding: 0.25em 0.5em;
-  font-size: 2em;
-  margin: 0.25em;
-  border-radius: 4px;
-  cursor: pointer;
-  opacity: 60%;
+  background-color: var(--bg-color);
 }
 
-.btn-float.play {
+.top-bar a,
+.top-bar button,
+.top-bar select {
+  display: flex;
+  border: 0;
+  border-radius: 4px;
+  border: 2px solid rgba(0, 0, 0, 0.3);
+  margin-right: 0.5em;
+  line-height: 1;
+  background-color: #fff;
+  color: inherit;
+}
+
+.top-bar select {
+  background: #fff;
+  padding: 0 0.5em;
+}
+
+.top-bar a,
+.top-bar button {
+  padding: 0 1em;
+  appearance: none;
+  cursor: pointer;
+}
+
+.top-bar svg {
+  font-size: 2em;
+}
+
+.top-bar button#play {
   background-color: #e83562;
   color: #fff;
 }
 
-.btn-float.stop {
+.top-bar button#stop {
   background-color: #697594;
   color: #333;
 }
 
-.game {
-  border-left: 1px solid;
-  overflow: auto;
+.editor {
+  display: flex;
+  flex-flow: row wrap;
+  height: calc(100% - var(--top-bar-height));
+}
+
+.editor > * {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .game iframe {
@@ -58,12 +86,7 @@ svg {
   height: 100%;
 }
 
-.game {
-  display: none;
-}
-
 .cm-scroller {
-  margin-top: 1rem !important;
   margin-bottom: 3rem !important;
 }
 
@@ -98,20 +121,11 @@ svg {
 }
 
 @media screen and (min-width: 64em) {
-  .editor {
-    display: flex;
-    flex-flow: row wrap;
-  }
-
   .editor > * {
     flex: 1;
   }
 
   .game {
-    display: block;
-  }
-
-  .btn-float {
-    display: none !important;
+    border-left: 2px solid rgba(0, 0, 0, 0.5);
   }
 }
